# country-slice

./: .gitignore  Cargo.toml  README.md
assets/: brick.glb  floor.gltf  test.glb
assets/shaders/: brick_test.frag  brick_test.vert  curve_test.frag  curve_test.vert  grid_test.frag  grid_test.vert  instancing_test.frag  instancing_test.vert  pbr.frag  pbr.vert  shadow.frag  shadow.vert  vertex_color.vert  wall_test.frag  wall_test.vert
meshes/: brick.glb  brush_arrow.json  brush_circle.json  brush_circle_cross.json  circle.json  plane.json  road_pebbles.json
shaders/: arch_curve_segments.comp  arch_layout_bricks.comp  blur.comp  compute_path_mask.comp  compute_test.glsl  indirect_draw_test.comp  indirect_draw_test.glsl  instanced_wall.frag  instanced_wall.vert  instanced_wall_arch.vert  paths.vert  road.vert  shadow.frag  shadow.vert  texture_test.frag  texture_test.vert  vertex_color.frag  vertex_color.vert  vertex_color_2d.vert  vertex_color_indirect.vert
src/: curve.rs  curve_manager.rs  grid.rs  instanced_wall.rs  main.rs  render_loop.rs  setup.rs  shaders.rs  shadow_decal.rs  utils.rs  wall_constructor.rs  window_events.rs
src/asset_libraries/: mesh_library.rs  mod.rs  shader_library.rs  vao_library.rs
src/components/: drawable.rs  editing_handle.rs  mod.rs  transform.rs  transient_mesh.rs  trigger_area.rs  ui.rs
src/geometry/: cube.rs  curve.rs  instanced_wall.rs  mod.rs  plane.rs  shadow_decal.rs  wall_constructor.rs
src/render/: camera.rs  mesh.rs  mod.rs  shader.rs  shaderwatch.rs  ssbo.rs  texture.rs  vao.rs
src/resources/: compute_path_mask.rs  (+9 more)
(+40 files in other folders)
