[package]
name = "country-slice"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5" 
bevy_dolly = { git = "https://github.com/BlackPhlox/bevy_dolly" }
dolly = "0.1.3"
bevy_mod_picking = "0.4.0" #for selecting objects in 3D from cursor screenspace position
gltf = "0.16.0"
tri-mesh = "0.5.0"
itertools = "0.10.1"