[package]
name = "country-slice"
version = "0.2.0"
edition = "2018"

authors = ["Anastasia Opara <anastasiaopara@gmail.com>"] 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glutin = "0.27.0"
glam = "0.20.0"
gltf = "0.16.0"
dolly = "0.1.4"
hotwatch = "0.4.6"
bevy_app = "0.5"
bevy_core = "0.5"
bevy_ecs = "0.5"
bevy_input = "0.5"
fastrand = "1.5.0"