[package]
name = "country-slice"
version = "0.2.0"
edition = "2018"

authors = ["Anastasia Opara <anastasiaopara@gmail.com>"] 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glutin = "0.27.0"
glam = "0.20.0"
gltf = "0.16.0"
dolly = "0.1.4"
hotwatch = "0.4.6"
bevy_app = "0.5"
bevy_core = "0.5"
bevy_ecs = "0.5"
bevy_input = "0.5"
fastrand = "1.5.0"
log = "0.4.14"
simple_logger = "1.13.0"
serde_json = "1.0"
puffin = "0.12.1"
puffin_http = "0.9.0"
bracket-noise = "0.8.2" #terrain noise
lazy_static = "1.4.0"